--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="greetings">
         <span>H</span>
         <span>A</span>
-        <span>L</span>
-        <span>O</span>
+        <span>I</span>
         &nbsp; 
         <span>S</span>
         <span>E</span>
