--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <span>G</span>
     </div>
     <div class="description">
-        <span>Nih ada hadiah lagi buat mu !!!</span>
-        <span>Semoga suka yahh...</span>
+        <div class="center">
+            <span>Nih ada hadiah lagi buat mu !!!</span>
+        </div>
     </div>
     <div class="button">
         <button>
